# gtg

./: .gitignore  pyproject.toml
GTG/: __init__.py  gtg.in
GTG/backends/: backend_caldav.py  generic_backend.py
GTG/backends/unmaintained/: backend_evolution.py  generictomboy.py
GTG/core/: datastore.py  filters.py  meson.build  saved_searches.py  tags2.py  tasks.py  tasks2.py  versioning.py
GTG/core/plugins/: api.py
GTG/gtk/: meson.build
GTG/gtk/backends/: backendstree.py
GTG/gtk/backends/parameters_ui/: import_tags.py
GTG/gtk/browser/: main_window.py  modify_tags.py  sidebar.py  tag_pill.py  task_pane.py
GTG/gtk/data/: main_window.ui
GTG/gtk/editor/: editor.py
GTG/plugins/hamster/: hamster.py
flatpak/: gen_python3_modules.sh  org.gnome.GTG.json  python3-requirements-dev.yaml  python3-requirements.yaml  requirements-dev.txt  requirements.txt
tests/: conftest.py
tests/backend/: backend_caldav_test.py
tests/core/: test_saved_search.py  test_search_filter.py  test_task2.py
tests/tools/: test_tags.py
